# edge-ai-bench

./: .gitignore  CMakeLists.txt  README.md  model.onnx
layer1_export/: export_model.py
layer2_cpp_runner/: CMakeLists.txt  bench.py  main.cpp
layer3_quantization/: quantize_and_compare.py
layer4_profiling/: roofline.py
layer5_android/: CMakeLists.txt  runner_android
